<resources>
    <string name="app_name">NewsAppKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notizieTitle">Notizie Locali</string>
    <string name="ErrorePermessi">Non è possibile visualizzare questa schermata, causa permessi.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enterMail">Enter your email</string>
    <string name="enterPassword">Enter your password</string>
    <string name="login">Login</string>
    <string name="notaccont">Non hai un account?</string>
    <string name="signup"><u>Registrati</u></string>
    <string name="InsNome">Inserisci il tuo nome</string>
    <string name="InsCognome">Inserisci il tuo cognome</string>
    <string name="InsPass">Inserisci una password</string>
    <string name="InsMail">Inserisci una mail</string>
    <string name="InsNumCell">Inserisci un numero di telefono valido</string>
    <string name="signupNoU">Registrati</string>
    <string name="ErrorMailorPass">Mail o password errati, ritenta</string>
    <string name="notifiche">Notifiche</string>
    <string name="lingua">Lingua</string>
    <string name="Impostazioni">Impostazioni</string>
</resources>